# visuidp

./: .gitignore
idp-api/: .env.example  .gitignore  DYNAMODB_TEST_SETUP.md  Dockerfile  Dockerfile.lambda  README.md  VERIFICATION_SUMMARY.txt  build-lambda.sh  docker-compose.yml  ecs-api-endpoint-test-results.md  ecs-frontend-form-test-results.md  ecs-migration-test-results.md  ecs-property-validation-test-results.md  ecs-verification-report.md  idp-api.code-workspace  manifest.json  package-lock.json  pom.xml  reset-and-verify-ecs.sh  test-ecs-migration-clean-db.sh  test-ecs-migration.sh  verify-ecs-migration.sh  verify-ecs-properties.sh  verify-migration.sh
idp-cli/: .gitignore  Cargo.toml  Dockerfile.lambda  README.md  build-lambda.sh  test_list_variables.sh
idp-cli/examples/kubernetes/: README.md  configmap.yaml  custom-vars.example.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
idp-cli/examples/terraform/: README.md  custom-vars.example.yaml  main.tf  outputs.tf  provider.tf  variables.tf
idp-cli/src/: api_client.rs  cli.rs  error.rs  file_writer.rs  generator.rs  lambda_handler.rs  lambda_main.rs  lib.rs  main.rs  models.rs  resource_mapper.rs  s3_client.rs  template_discovery.rs  template_processor.rs  variable_context.rs
idp-cli/terraform/: README.md  main.tf  outputs.tf  variables.tf
idp-cli/tests/: cli_property_tests.proptest-regressions  cli_property_tests.rs  integration_tests.rs  lambda_handler_test.rs  s3_integration_test.rs
idp-ui/: .env.example  .gitignore  COMPONENTS.md  README.md  clear_storage.js  dev-setup.sh  (+10 more)
(+759 files in other folders)
